more spacing issues fixed

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
 body {
-    width:100%;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -20,7 +20,6 @@ nav {
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
-    border: 1px solid black;
  }
 
 .logo {
@@ -38,7 +37,7 @@ header {
     display: flex;
     align-items: center;
     text-align:center;
-    padding: 5%;
+    padding: 2%;
 }
 
 .header-right {
@@ -57,6 +56,10 @@ button {
 
 .header-left {
     width: 50%;
+}
+
+h1 {
+    text-transform: uppercase; 
 }
 
 .first-paragraph {
